--- a/src/eChess/eChess.csproj
+++ b/src/eChess/eChess.csproj
@@ -68,6 +68,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ButtonPieces.cs" />
+    <Compile Include="PortableGameNotation.cs" />
+    <Compile Include="TimerModel.cs" />
     <Compile Include="Updater.xaml.cs">
       <DependentUpon>Updater.xaml</DependentUpon>
     </Compile>
@@ -177,6 +180,9 @@
     </PackageReference>
     <PackageReference Include="MaterialDesignThemes">
       <Version>4.4.0</Version>
+    </PackageReference>
+    <PackageReference Include="ModernWpf.MessageBox">
+      <Version>0.5.2</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
