--- a/src/eChess/eChess.csproj
+++ b/src/eChess/eChess.csproj
@@ -54,7 +54,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -187,12 +186,16 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
+    <PackageReference Include="XamlAnimatedGif">
+      <Version>2.0.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <SplashScreen Include="Resources\SplashScreen.jpg" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Capture.wav" />
+    <Resource Include="Resources\SandClock.gif" />
     <Content Include="Resources\Move.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
