--- a/src/eChess/App.config
+++ b/src/eChess/App.config
@@ -1,6 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="eChess.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <eChess.Properties.Settings>
+            <setting name="PlayerGuid" serializeAs="String">
+                <value>00000000-0000-0000-0000-000000000000</value>
+            </setting>
+            <setting name="GameGuid" serializeAs="String">
+                <value>00000000-0000-0000-0000-000000000000</value>
+            </setting>
+            <setting name="Username" serializeAs="String">
+                <value>Anonymous</value>
+            </setting>
+            <setting name="Sounds" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="WhiteColor" serializeAs="String">
+                <value>MintCream</value>
+            </setting>
+            <setting name="BlackColor" serializeAs="String">
+                <value>SteelBlue</value>
+            </setting>
+        </eChess.Properties.Settings>
+    </userSettings>
 </configuration>
