--- a/src/eChess/eChess.csproj
+++ b/src/eChess/eChess.csproj
@@ -45,6 +45,7 @@
     <Reference Include="netstandard" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression.FileSystem" />
@@ -69,6 +70,10 @@
     </ApplicationDefinition>
     <Compile Include="ButtonPieces.cs" />
     <Compile Include="PortableGameNotation.cs" />
+    <Compile Include="SettingsIO.cs" />
+    <Compile Include="SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TimerModel.cs" />
     <Compile Include="Updater.xaml.cs">
       <DependentUpon>Updater.xaml</DependentUpon>
@@ -89,13 +94,17 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Updater.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MatchFinder.cs" />
+    <Compile Include="MatchController.cs" />
     <Compile Include="Entities\MoveEntity.cs" />
     <Compile Include="Moves.cs" />
     <Compile Include="Entities\GameEntity.cs" />
@@ -122,7 +131,7 @@
       <Link>.editorconfig</Link>
     </None>
     <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
@@ -177,8 +186,11 @@
     <PackageReference Include="DK.WshRuntime">
       <Version>4.1.3.201115164</Version>
     </PackageReference>
+    <PackageReference Include="dsafa.WpfColorPicker">
+      <Version>1.3.0</Version>
+    </PackageReference>
     <PackageReference Include="MaterialDesignThemes">
-      <Version>4.4.0</Version>
+      <Version>4.6.0</Version>
     </PackageReference>
     <PackageReference Include="ModernWpf.MessageBox">
       <Version>0.5.2</Version>
@@ -187,7 +199,7 @@
       <Version>13.0.1</Version>
     </PackageReference>
     <PackageReference Include="XamlAnimatedGif">
-      <Version>2.0.2</Version>
+      <Version>2.0.3</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
